# gsnake-specs

./: .gitignore  .mlc.json  README.md  package-lock.json  package.json  pyproject.toml
.github/hooks/: README.md  pre-commit
.github/workflows/: ci.yml  test.yml
artstyle-synchronization/: brief.md  flows.md  plan.md
deployment/: core-flows.md  epic-brief.md  tech-plan.md
e2e-testing/: core-flows.md  epic-brief.md
findings/: 2026-01-17.md
folder-structure/: core-flows.md  epic-brief.md  tech-plan.md
gravity-snake/: core-flows.md  epic-brief.md  tech-plan.md  web-ui-wireframe.md
level-editor/: epic.md  flows.md  requirements.md
level-management/: core-flows.md  epic-brief.md  tech-plan.md
n8n/: UPDATES.md  architecture-analysis.md  architecture-decision.md  brief.md  flows.md  plan.md  test-findings.md
navigation/: core-flows.md  epic-brief.md  tech-plan.md
rust-core/: core-flows.md  epic-brief.md  extended-core-flows.md  extended-epic-brief.md  extended-tech-plan.md  gsnake-core-contract.md  gsnake-core.md  tech-plan.md
tasks/: prd-act-coverage-pipeline-reliability.md  prd-automated-level-sync.md  prd-ci-tests-and-workflows.md  prd-fix-ci-pipeline-errors.md  prd-fix-ci-standalone-builds.md  prd-level-editor-testing.md  prd-level-editor.md  prd-pre-commit-hooks-extended.md  prd-pre-commit-hooks.md  prd-standalone-submodules-build.md  prd-test-coverage-80-plus.md  repo-architecture.md
test-results/: exported-level-sample.json  us-t018-level-a.json  us-t018-level-b.json
wasm-tsrs-integration/: core-flows.md  epic-brief.md  tech-plan.md
(+31 files in other folders)
